set border-sizing: border-box

--- a/index.less
+++ b/index.less
@@ -13,3 +13,11 @@
   font-family: 'Belwe Bold';
   src: url('img/Belwe Bold.otf');
 }
+
+/* Body */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
