--- a/index.css
+++ b/index.css
@@ -12,10 +12,15 @@
 *::after {
   box-sizing: border-box;
 }
+html {
+  height: 100vh;
+  height: -webkit-fill-available;
+}
 body {
   display: flex;
   flex-direction: row;
   margin: 0;
+  width: 100vw;
   height: 100vh;
   height: -webkit-fill-available;
   background-color: #666F74;
@@ -34,7 +39,6 @@ body {
   background-color: #EBEDEF;
 }
 #preview {
-  font-family: Inter, -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 16px;
   color: black;
   background-color: #EBEDEF;
@@ -44,7 +48,6 @@ body {
   display: flex;
   flex-direction: column;
   width: 50%;
-  height: calc(inherit - 30px);
   margin: 15px;
 }
 .container + .container {
@@ -74,7 +77,7 @@ body {
 .view {
   margin: 0;
   padding: 10px;
-  flex-grow: 1;
+  flex: 1;
   overflow-y: scroll;
   border: 1px solid black;
   border-top: none;
@@ -90,8 +93,8 @@ body {
 }
 /* Resize */
 .maximized {
-  margin: 0 !important;
-  width: 100% !important;
+  margin: 15px !important;
+  width: calc(100% - 30px) !important;
 }
 .minimized {
   display: none !important;
