fix mobile textarea attempt 1

--- a/index.less
+++ b/index.less
@@ -9,7 +9,7 @@
   narrow: 720px;
 }
 
-@shadow: 0px 0px 5px 1px darken(@colors[body], 20%);
+@shadow: 0px 0px 8px 2px darken(@colors[body], 20%);
 @border: 1px solid black;
 
 @import url('https://fonts.googleapis.com/css?family=Russo+One&display=swap');
@@ -105,6 +105,7 @@ body {
   }
 }
 #editor {
+  display: block;
   outline: none !important;
   resize: none;
 }
