--- a/index.css
+++ b/index.css
@@ -79,9 +79,10 @@ body {
   padding: 10px;
   flex: 1;
   overflow-y: scroll;
-  border: 1px solid black;
-  border-top: none;
-  box-shadow: 0px 0px 8px 2px #363b3e;
+  border: 1px solid black !important;
+  border-top: none !important;
+  border-radius: none !important;
+  box-shadow: 0px 0px 8px 2px #363b3e !important;
 }
 .view::after {
   content: '';
