fix mobile textarea attempt 3

--- a/index.less
+++ b/index.less
@@ -98,7 +98,7 @@ body {
   overflow-y: scroll;
   border: @border !important;
   border-top: none !important;
-  border-radius: none !important;
+  border-radius: 0 !important;
   box-shadow: @shadow !important;
   &::after {
     content: '';
