--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@ body {
   overflow-y: scroll;
   border: 1px solid black !important;
   border-top: none !important;
-  border-radius: none !important;
+  border-radius: 0 !important;
   box-shadow: 0px 0px 8px 2px #363b3e !important;
 }
 .view::after {
