--- a/index.css
+++ b/index.css
@@ -47,7 +47,8 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  flex-grow: 1;
+  flex-basis: 0;
   margin: 15px;
 }
 .container + .container {
@@ -61,7 +62,7 @@ body {
   height: 30px;
   padding: 8px;
   border: 1px solid black;
-  box-shadow: 0px 0px 8px 2px #363b3e;
+  box-shadow: 0 0 8px 2px #363b3e;
   position: relative;
   z-index: 1;
 }
@@ -78,11 +79,14 @@ body {
   margin: 0;
   padding: 10px;
   flex: 1;
+  max-width: 100%;
   overflow-y: scroll;
-  border: 1px solid black !important;
-  border-top: none !important;
-  border-radius: 0 !important;
-  box-shadow: 0px 0px 8px 2px #363b3e !important;
+  -webkit-box-shadow: 0 0 8px 2px #363b3e;
+  -webkit-appearance: none;
+  box-shadow: 0 0 8px 2px #363b3e;
+  border: 1px solid black;
+  border-top: none;
+  border-radius: 0;
 }
 .view::after {
   content: '';
