--- a/index.less
+++ b/index.less
@@ -9,7 +9,7 @@
   narrow: 720px;
 }
 
-@shadow: 0px 0px 8px 2px darken(@colors[body], 20%);
+@shadow: 0 0 8px 2px darken(@colors[body], 20%);
 @border: 1px solid black;
 
 @import url('https://fonts.googleapis.com/css?family=Russo+One&display=swap');
@@ -60,7 +60,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  flex: 1;
   margin: 15px;
 }
 .container + .container {
@@ -95,11 +95,14 @@ body {
   margin: 0;
   padding: 10px;
   flex: 1;
+  max-width: 100%;
   overflow-y: scroll;
-  border: @border !important;
-  border-top: none !important;
-  border-radius: 0 !important;
-  box-shadow: @shadow !important;
+  -webkit-box-shadow: @shadow;
+  -webkit-appearance: none;
+  box-shadow: @shadow;
+  border: @border;
+  border-top: none;
+  border-radius: 0;
   &::after {
     content: '';
     padding: 5px;
