--- a/index.css
+++ b/index.css
@@ -81,6 +81,7 @@ body {
   max-width: 100%;
   overflow-y: scroll;
   -webkit-box-shadow: 0 0 8px 2px #363b3e;
+  -webkit-appearance: none;
   box-shadow: 0 0 8px 2px #363b3e;
   border: 1px solid black;
   border-top: none;
