--- a/index.less
+++ b/index.less
@@ -98,6 +98,7 @@ body {
   max-width: 100%;
   overflow-y: scroll;
   -webkit-box-shadow: @shadow;
+  -webkit-appearance: none;
   box-shadow: @shadow;
   border: @border;
   border-top: none;
